# cider-deliberation

./: .gitattributes  .gitignore  README.md  check_a100_full.sh  pyproject.toml  requirements.txt
agents/: adversarial_agent.py  base.py  llm_agent.py  llm_agent.py.before_retry_patch.20260602_202547  llm_agent.py.before_timeout_fix.20260602_202152  mock_agent.py  prompts.py
analysis/: build_full_comprehensive_v6_report.py  build_full_experiment_v4_report.py  build_full_experiment_v5_report.py  build_full_experiment_v6_report.py  inspect_failures.py  make_plots.py  make_tables.py  md_to_pdf.py
configs/: default.yaml  full_eval.yaml  full_mock_all.yaml  real_llm_v1.yaml  real_llm_v2.yaml  real_llm_v2_adversarial.yaml  real_llm_v3.yaml  real_llm_v3_adversarial.yaml  real_llm_v3_stress.yaml  real_llm_v4_mistral.yaml  real_llm_v4_mistral_adversarial.yaml  real_llm_v4_mistral_stress.yaml  real_llm_v4_mock.yaml  real_llm_v4_mock_adversarial.yaml  real_llm_v4_qwen3.yaml  real_llm_v5_mistral.yaml  real_llm_v5_mock.yaml  real_llm_v5_qwen3.yaml  real_llm_v6_mistral_160.yaml  real_llm_v6_mistral_adversarial_40.yaml  real_llm_v6_mistral_full720.yaml  real_llm_v6_mistral_no_randomized_exposure_40.yaml  real_llm_v6_qwen3_32.yaml  small_smoke_test.yaml
datasets/: README.md  download_preprocess.py  loaders.py  schemas.py
docs/: cider_v2_confirmatory_protocol.md  cider_v2_selective_gate.md  method_deviations.md  metrics.md  reproducibility.md
experiments/: prepare_v4_splits.py  prepare_v6_subsets.py  run_ablations.py  run_adversarial.py  run_benchmark.py  run_smoke_tests.py  (+1 more)
(+44 files in other folders)
